--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       <title>Maze Game</title>
       <link rel="stylesheet" href="./style.css">
       <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
+      <script src="./script.js" defer></script>
 </head>
 
 <body>
       <canvas></canvas>
-      <script src="./script.js"></script>
 </body>
 
 </html>
