made random maze generator only player left

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       <title>Maze Game</title>
       <link rel="stylesheet" href="./style.css">
       <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
-      <script src="./script.js" defer></script>
+      <script src="./maze.js" defer></script>
+      <script src="./player.js" defer></script>
 </head>
 
 <body>
