--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 </head>
 
 <body>
-      <canvas></canvas>
+      <div class="maze">
+            <canvas></canvas>
+      </div>
+      <div class="d-pad">
+            <span class="left"></span>
+            <span class="up"></span>
+            <span class="right"></span>
+            <span class="down"></span>
+      </div>
 </body>
 
 </html>
