moving to tahaahmedmallick

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <span class="right" data-key="39"></span>
             <span class="down" data-key="40"></span>
       </div>
-      <div class="win">
-            YOU WIN!
-      </div>
+      <div class="win">YOU WIN!</div>
 </body>
 
 </html>
