still trying to get form right

--- a/index.html
+++ b/index.html
@@ -24,6 +24,32 @@
             <span class="down" data-key="40"></span>
       </div>
       <div class="win">YOU WIN!</div>
+      <div class="title">
+            <form>
+                  <label id="time-label">Time: </label>
+                  <div class="form-control time">
+                        <input type="number" required>
+                        <label>HH</label>
+                        <span class="underline"></span>
+                  </div>:
+                  <div class="form-control time">
+                        <input type="number" required>
+                        <label>MM</label>
+                        <span class="underline"></span>
+                  </div>:
+                  <div class="form-control time">
+                        <input type="number" required>
+                        <label>SS</label>
+                        <span class="underline"></span>
+                  </div>
+                  <div class="form-control">
+                        <input type="number" required>
+                        <label>Row/Column</label>
+                        <span class="underline"></span>
+                  </div>
+                  <span class="start-btn">START <span>></span></span>
+            </form>
+      </div>
 </body>
 
 </html>
